Fix the alignment of the unsupported-format message

--- a/app/assets/stylesheets/scoped/items.scss
+++ b/app/assets/stylesheets/scoped/items.scss
@@ -130,6 +130,8 @@ body#show_item {
           overflow: scroll;
         }
         .unsupported-format {
+          display: flex;
+          align-items: center;
           text-align: center;
           .format-name {
             color: $gray-600;
